[fix] Potion Cauldron interacts with Arrows
**Breaking changes to your existing world!**

This allows to create Tipped Arrows with Potion Cauldron.

The maximum level of Potion Cauldron become 8. If it exists in your world, the fluid level will be lower.

To avoid this error, please take these out.

* update `BedrockCauldronBehavior`
  - add `TIPPED_ARROW_WITH_POTION` behavior

* update `AbstractBECauldronBlock`
  - now extends `AbstractCauldronBlock`

* unregistered mixins
  - `mixin.common.features.cauldron.AbstractCauldronBlockMixin`
  - `mixin.common.features.cauldron.LeveledCauldronBlockAccessor`

* new block models without using `LeveledCauldronBlock`