@@ -1,9 +1,10 @@
 package me.juancarloscp52.bedrockify.common.block.cauldron;
 
 import me.juancarloscp52.bedrockify.Bedrockify;
+import me.juancarloscp52.bedrockify.common.block.ColoredWaterCauldronBlock;
+import me.juancarloscp52.bedrockify.common.block.PotionCauldronBlock;
 import me.juancarloscp52.bedrockify.common.block.entity.WaterCauldronBlockEntity;
 import me.juancarloscp52.bedrockify.common.features.cauldron.BedrockCauldronBlocks;
-import me.juancarloscp52.bedrockify.mixin.common.features.cauldron.LeveledCauldronBlockAccessor;
 import net.fabricmc.fabric.api.networking.v1.PacketByteBufs;
 import net.fabricmc.fabric.api.networking.v1.PlayerLookup;
 import net.fabricmc.fabric.api.networking.v1.ServerPlayNetworking;
@@ -52,24 +53,23 @@ public interface BedrockCauldronBehavior {
             return ActionResult.PASS;
         }
 
-        Optional<WaterCauldronBlockEntity> entity = world.getBlockEntity(pos, BedrockCauldronBlocks.WATER_CAULDRON_ENTITY);
+        Optional<WaterCauldronBlockEntity> entity = retrieveCauldronEntity(world, pos);
         if (entity.isEmpty()) {
-            final String message = String.format("[%s] something went wrong to dye item", Bedrockify.class.getSimpleName());
-            Bedrockify.LOGGER.error(message, new NullPointerException("RegistryWorldView#getBlockEntity is not present at " + pos));
             return emptyCauldronFromWrongState(state, world, pos, player, hand, stack);
         }
 
         final WaterCauldronBlockEntity blockEntity = entity.get();
         if (!(Registries.ITEM.get(blockEntity.getFluidId()) instanceof final DyeItem dyeItem)) {
-            final String message = String.format("[%s] something went wrong to get color", Bedrockify.class.getSimpleName());
-            Bedrockify.LOGGER.error(message, new IllegalStateException(String.format("%s#getFluidId is not an instance of DyeItem", WaterCauldronBlockEntity.class.getSimpleName())));
+            Bedrockify.LOGGER.error(
+                    "[%s] something went wrong to get color".formatted(Bedrockify.class.getSimpleName()),
+                    new IllegalStateException("%s#getFluidId is not an instance of DyeItem".formatted(WaterCauldronBlockEntity.class.getSimpleName())));
             return emptyCauldronFromWrongState(state, world, pos, player, hand, stack);
         }
 
         if (!world.isClient) {
-            LeveledCauldronBlock.decrementFluidLevel(state, world, pos);
-            player.setStackInHand(hand, DyeableItem.blendAndSetColor(stack, List.of(dyeItem)));
+            ColoredWaterCauldronBlock.dyeAndDecrement(state, world, pos);
             player.incrementStat(Stats.USE_CAULDRON);
+            player.setStackInHand(hand, DyeableItem.blendAndSetColor(stack, List.of(dyeItem)));
             world.playSound(null, pos, SoundEvents.ENTITY_GENERIC_SPLASH, SoundCategory.BLOCKS, 0.15f, 1.25f);
             world.emitGameEvent(null, GameEvent.FLUID_PICKUP, pos);
         }
@@ -88,15 +88,22 @@ public interface BedrockCauldronBehavior {
         }
 
         Optional<WaterCauldronBlockEntity> entity = world.getBlockEntity(pos, BedrockCauldronBlocks.WATER_CAULDRON_ENTITY);
+        final int level;
         if (entity.isPresent()) {
+            // The Cauldron already has color.
             final WaterCauldronBlockEntity blockEntity = entity.get();
             if (Objects.equals(blockEntity.getFluidId(), Registries.ITEM.getId(dyeItem))) {
                 return ActionResult.SUCCESS;
             }
+            level = state.get(ColoredWaterCauldronBlock.LEVEL);
+        } else {
+            // Otherwise it may be Water Cauldron.
+            level = ColoredWaterCauldronBlock.getLevelFromWaterCauldronState(state);
         }
 
         if (!world.isClient) {
-            BlockState newState = BedrockCauldronBlocks.COLORED_WATER_CAULDRON.getDefaultState().with(LeveledCauldronBlock.LEVEL, state.get(LeveledCauldronBlock.LEVEL));
+            BlockState newState = BedrockCauldronBlocks.COLORED_WATER_CAULDRON.getDefaultState()
+                    .with(ColoredWaterCauldronBlock.LEVEL, level);
             world.setBlockState(pos, newState);
             if (!player.getAbilities().creativeMode) {
                 stack.decrement(1);
@@ -124,20 +131,25 @@ public interface BedrockCauldronBehavior {
         }
 
         final int nextLevel;
-        if (state.contains(LeveledCauldronBlock.LEVEL)) {
+        if (state.isOf(Blocks.WATER_CAULDRON)) {
             if (state.get(LeveledCauldronBlock.LEVEL) >= LeveledCauldronBlock.MAX_LEVEL) {
                 return ActionResult.SUCCESS;
             }
             nextLevel = state.cycle(LeveledCauldronBlock.LEVEL).get(LeveledCauldronBlock.LEVEL);
+        } else if (state.isOf(BedrockCauldronBlocks.COLORED_WATER_CAULDRON)) {
+            if (state.get(ColoredWaterCauldronBlock.LEVEL) >= ColoredWaterCauldronBlock.MAX_LEVEL) {
+                return ActionResult.SUCCESS;
+            }
+            nextLevel = Math.min(ColoredWaterCauldronBlock.convertToWaterCauldronLevel(state) + 1, LeveledCauldronBlock.MAX_LEVEL);
         } else {
             nextLevel = Blocks.WATER_CAULDRON.getDefaultState().get(LeveledCauldronBlock.LEVEL);
         }
 
         if (!world.isClient) {
             // Replace with Water Cauldron.
-            player.setStackInHand(hand, ItemUsage.exchangeStack(stack, player, new ItemStack(Items.GLASS_BOTTLE)));
             player.incrementStat(Stats.USE_CAULDRON);
             player.incrementStat(Stats.USED.getOrCreateStat(stack.getItem()));
+            player.setStackInHand(hand, ItemUsage.exchangeStack(stack, player, new ItemStack(Items.GLASS_BOTTLE)));
             world.setBlockState(pos, Blocks.WATER_CAULDRON.getDefaultState().with(LeveledCauldronBlock.LEVEL, nextLevel));
             world.playSound(null, pos, SoundEvents.ITEM_BOTTLE_EMPTY, SoundCategory.BLOCKS);
             world.emitGameEvent(null, GameEvent.FLUID_PLACE, pos);
@@ -154,29 +166,27 @@ public interface BedrockCauldronBehavior {
             return ActionResult.PASS;
         }
 
-        Optional<WaterCauldronBlockEntity> entity = world.getBlockEntity(pos, BedrockCauldronBlocks.WATER_CAULDRON_ENTITY);
+        Optional<WaterCauldronBlockEntity> entity = retrieveCauldronEntity(world, pos);
         if (entity.isEmpty()) {
-            final String message = String.format("[%s] something went wrong to get the potion fluid", Bedrockify.class.getSimpleName());
-            Bedrockify.LOGGER.error(message, new NullPointerException("RegistryWorldView#getBlockEntity is not present at " + pos));
             return emptyCauldronFromWrongState(state, world, pos, player, hand, stack);
         }
 
         final WaterCauldronBlockEntity blockEntity = entity.get();
         final Item item = stack.getItem();
-        final Item potionType = blockEntity.getPotionType();
-        final Identifier potionId = blockEntity.getFluidId();
-        final Potion potion = Registries.POTION.get(potionId);
-        if (Objects.equals(Registries.POTION.getId(potion), Registries.POTION.getDefaultId())) {
-            final String message = String.format("[%s] something went wrong to get the potion from Registries", Bedrockify.class.getSimpleName());
-            Bedrockify.LOGGER.error(message, new IllegalStateException("potion has disappeared, maybe the mod is gone?"));
+        Optional<Potion> optionalPotion = retrievePotion(blockEntity);
+        if (optionalPotion.isEmpty()) {
             return emptyCauldronFromWrongState(state, world, pos, player, hand, stack);
         }
 
+        final Potion potion = optionalPotion.get();
+        final Item potionType = blockEntity.getPotionType();
         if (!world.isClient) {
-            player.setStackInHand(hand, ItemUsage.exchangeStack(stack, player, PotionUtil.setPotion(new ItemStack(potionType), potion)));
+            if (!PotionCauldronBlock.tryPickFluid(state, world, pos)) {
+                return ActionResult.SUCCESS;
+            }
             player.incrementStat(Stats.USE_CAULDRON);
             player.incrementStat(Stats.USED.getOrCreateStat(item));
-            LeveledCauldronBlock.decrementFluidLevel(state, world, pos);
+            player.setStackInHand(hand, ItemUsage.exchangeStack(stack, player, PotionUtil.setPotion(new ItemStack(potionType), potion)));
             world.playSound(null, pos, SoundEvents.ITEM_BOTTLE_FILL, SoundCategory.BLOCKS);
             world.emitGameEvent(null, GameEvent.FLUID_PICKUP, pos);
             addPotionParticle(world.getBlockState(pos), world, pos, PotionUtil.getColor(potion));
@@ -204,14 +214,11 @@ public interface BedrockCauldronBehavior {
         }
 
         final BlockState newState;
-        final Identifier inStackPotionId = Registries.POTION.getId(PotionUtil.getPotion(stack));
-        if (state.contains(LeveledCauldronBlock.LEVEL)) {
+        final Identifier inStackPotionId = Registries.POTION.getId(potion);
+        if (state.contains(PotionCauldronBlock.LEVEL)) {
             // The cauldron already has fluid.
-            Optional<WaterCauldronBlockEntity> entity = world.getBlockEntity(pos, BedrockCauldronBlocks.WATER_CAULDRON_ENTITY);
+            Optional<WaterCauldronBlockEntity> entity = retrieveCauldronEntity(world, pos);
             if (entity.isEmpty()) {
-                // Increasing the fluid requires to retrieve the potion.
-                final String message = String.format("[%s] something went wrong to get the potion fluid", Bedrockify.class.getSimpleName());
-                Bedrockify.LOGGER.error(message, new NullPointerException("RegistryWorldView#getBlockEntity is not present at " + pos));
                 return emptyCauldronFromWrongState(state, world, pos, player, hand, stack);
             }
 
@@ -222,11 +229,13 @@ public interface BedrockCauldronBehavior {
             }
 
             // The cauldron is full.
-            if (state.get(LeveledCauldronBlock.LEVEL) >= LeveledCauldronBlock.MAX_LEVEL) {
+            final int currentLevel = state.get(PotionCauldronBlock.LEVEL);
+            if (currentLevel >= PotionCauldronBlock.MAX_LEVEL) {
                 return ActionResult.SUCCESS;
             }
 
-            newState = state.cycle(LeveledCauldronBlock.LEVEL);
+            final int nextLevel = Math.min(currentLevel + PotionCauldronBlock.BOTTLE_LEVEL, PotionCauldronBlock.MAX_LEVEL);
+            newState = BedrockCauldronBlocks.POTION_CAULDRON.getDefaultState().with(PotionCauldronBlock.LEVEL, nextLevel);
         } else {
             // The cauldron is empty.
             newState = BedrockCauldronBlocks.POTION_CAULDRON.getDefaultState();
@@ -239,9 +248,9 @@ public interface BedrockCauldronBehavior {
 
         final ItemStack processing = stack.copy();
         if (!world.isClient) {
-            player.setStackInHand(hand, ItemUsage.exchangeStack(stack, player, new ItemStack(Items.GLASS_BOTTLE)));
             player.incrementStat(Stats.USE_CAULDRON);
             player.incrementStat(Stats.USED.getOrCreateStat(stack.getItem()));
+            player.setStackInHand(hand, ItemUsage.exchangeStack(stack, player, new ItemStack(Items.GLASS_BOTTLE)));
             world.setBlockState(pos, newState);
             world.playSound(null, pos, SoundEvents.ITEM_BOTTLE_EMPTY, SoundCategory.BLOCKS);
             world.emitGameEvent(null, GameEvent.FLUID_PLACE, pos);
@@ -255,6 +264,114 @@ public interface BedrockCauldronBehavior {
 
         return ActionResult.success(world.isClient);
     };
+
+    /**
+     * Creates tipped arrows.
+     */
+    CauldronBehavior TIPPED_ARROW_WITH_POTION = (state, world, pos, player, hand, stack) -> {
+        if (state == null || world == null || pos == null || !Bedrockify.getInstance().settings.bedrockCauldron) {
+            return ActionResult.PASS;
+        }
+
+        if (!stack.isOf(Items.ARROW)) {
+            return ActionResult.PASS;
+        }
+
+        Optional<WaterCauldronBlockEntity> entity = retrieveCauldronEntity(world, pos);
+        if (entity.isEmpty()) {
+            return emptyCauldronFromWrongState(state, world, pos, player, hand, stack);
+        }
+
+        final WaterCauldronBlockEntity blockEntity = entity.get();
+        Optional<Potion> optionalPotion = retrievePotion(blockEntity);
+        if (optionalPotion.isEmpty()) {
+            return emptyCauldronFromWrongState(state, world, pos, player, hand, stack);
+        }
+
+        final Potion potion = optionalPotion.get();
+        if (!world.isClient) {
+            // Determine arrow count and fluid level to decrease.
+            final int tippedArrowCount = PotionCauldronBlock.getMaxTippedArrowCount(stack, state);
+            if (tippedArrowCount <= 0) {
+                return ActionResult.SUCCESS;
+            }
+            final int consumedFluidLevel = PotionCauldronBlock.getDecLevelByStack(stack, tippedArrowCount);
+            final int afterFluidLevel = state.get(PotionCauldronBlock.LEVEL) - consumedFluidLevel;
+
+            // Create tipped arrows.
+            final ItemStack result = new ItemStack(Items.TIPPED_ARROW, tippedArrowCount);
+            PotionUtil.setPotion(result, potion);
+            PotionUtil.setCustomPotionEffects(result, PotionUtil.getCustomPotionEffects(new ItemStack(Items.LINGERING_POTION)));
+
+            if (player.isCreative()) {
+                if (!player.getInventory().contains(result)) {
+                    player.getInventory().insertStack(result);
+                }
+
+                player.setStackInHand(hand, stack);
+            } else {
+                // Exchange an item.
+                stack.decrement(tippedArrowCount);
+
+                if (stack.isEmpty()) {
+                    player.setStackInHand(hand, result);
+                } else {
+                    if (!player.getInventory().insertStack(result)) {
+                        player.dropItem(result, false);
+                    }
+                    player.setStackInHand(hand, stack);
+                }
+            }
+
+            // Consume the fluid.
+            if (afterFluidLevel <= 1) {
+                world.setBlockState(pos, Blocks.CAULDRON.getDefaultState());
+            } else {
+                world.setBlockState(pos, BedrockCauldronBlocks.POTION_CAULDRON.getDefaultState().with(PotionCauldronBlock.LEVEL, afterFluidLevel));
+            }
+            player.incrementStat(Stats.USE_CAULDRON);
+            player.increaseStat(Stats.USED.getOrCreateStat(Items.ARROW), tippedArrowCount);
+            world.playSound(null, pos, SoundEvents.ENTITY_GENERIC_SPLASH, SoundCategory.BLOCKS, 0.15f, 1.25f);
+            world.emitGameEvent(null, GameEvent.FLUID_PICKUP, pos);
+        }
+
+        return ActionResult.success(world.isClient);
+    };
+
+    /**
+     * Helper method that checks and retrieves the {@link WaterCauldronBlockEntity}.<br>
+     * There are no Entity, the error log will appear.
+     *
+     * @return {@link Optional} of WaterCauldronBlockEntity.
+     */
+    static Optional<WaterCauldronBlockEntity> retrieveCauldronEntity(World world, BlockPos pos) {
+        Optional<WaterCauldronBlockEntity> entity = world.getBlockEntity(pos, BedrockCauldronBlocks.WATER_CAULDRON_ENTITY);
+        if (entity.isEmpty()) {
+            // Increasing the fluid requires to retrieve the potion.
+            Bedrockify.LOGGER.error(
+                    "[%s] something went wrong to get the fluid in cauldron".formatted(Bedrockify.class.getSimpleName()),
+                    new NullPointerException("RegistryWorldView#getBlockEntity is not present at " + pos));
+            return Optional.empty();
+        }
+        return entity;
+    }
+
+    /**
+     * Helper method that checks exact potion fluid and returns {@link Potion}.
+     *
+     * @return {@link Optional} of Potion.
+     */
+    static Optional<Potion> retrievePotion(WaterCauldronBlockEntity blockEntity) {
+        final Identifier potionId = blockEntity.getFluidId();
+        final Potion potion = Registries.POTION.get(potionId);
+        if (Objects.equals(Registries.POTION.getId(potion), Registries.POTION.getDefaultId())) {
+            Bedrockify.LOGGER.error(
+                    "[%s] something went wrong to get the potion from Registries".formatted(Bedrockify.class.getSimpleName()),
+                    new IllegalStateException("potion has disappeared, maybe the mod is gone?"));
+            return Optional.empty();
+        }
+        return Optional.of(potion);
+    }
 
     static ActionResult emptyCauldronFromWrongState(BlockState state, World world, BlockPos pos, PlayerEntity player, Hand hand, ItemStack stack) {
         return evaporateCauldron(state, world, pos, player, hand, stack, stack.copy());
@@ -305,8 +422,8 @@ public interface BedrockCauldronBehavior {
         }
 
         final double offsetY;
-        if (state.getBlock() instanceof LeveledCauldronBlock leveledCauldronBlock) {
-            offsetY = 0.05 + ((LeveledCauldronBlockAccessor) leveledCauldronBlock).invokeGetFluidHeight(state);
+        if (state.getBlock() instanceof PotionCauldronBlock potionCauldronBlock) {
+            offsetY = 0.05 + potionCauldronBlock.getFluidHeight(state);
         } else {
             offsetY = 0.5;
         }
@@ -315,7 +432,7 @@ public interface BedrockCauldronBehavior {
         final double blue = (color & 0xff) / 255.;
         final Identifier particleId = Registries.PARTICLE_TYPE.getId(ParticleTypes.ENTITY_EFFECT);
         for (int i = 0; i < 7; ++i) {
-            PacketByteBuf buf = PacketByteBufs.create();
+            final PacketByteBuf buf = PacketByteBufs.create();
             buf.writeIdentifier(particleId);
             buf.writeDouble(pos.getX() + 0.15 + Math.random() * 0.7);
             buf.writeDouble(pos.getY() + offsetY);
@@ -358,6 +475,7 @@ public interface BedrockCauldronBehavior {
             COLORED_WATER_CAULDRON_BEHAVIOR.putIfAbsent(potionItem, PLACE_WATER_BY_POTION);
         });
         POTION_CAULDRON_BEHAVIOR.putIfAbsent(Items.GLASS_BOTTLE, PICK_POTION_FLUID);
+        POTION_CAULDRON_BEHAVIOR.putIfAbsent(Items.ARROW, TIPPED_ARROW_WITH_POTION);
         registerEvaporateBucketBehavior(POTION_CAULDRON_BEHAVIOR);
     }
 }
